--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,9 +1,10 @@
-$light: #f4f4f4;
-$dark: #303030;
-$primary: #f4f4f4;
+$light: #303030;
+$dark: #f4f4f4;
+$primary: #303030;
 // $primary-light: #355574;
 // $bg: #2c3e50;
-$dark-light: #363636;
+$dark-light: #f4f4f4;
+// $dark-light: #363636;
 
 $normal: 400;
 $bold: 700;
